@startuml

class Alumno {
    - String nombre
    - String apellido
    - List<Materia> materiasAprobadas
    + void agregarMateriaAprobada(Materia materia)
    + List<Materia> getMateriasAprobadas()
}

class Materia {
    - String nombre
    - List<Materia> correlativas
    + Boolean cumpleCorrelativas(List<Materia> materias)
    + List<Materia> materias getMateriasAprobadas()
}

class Inscripcion {
    - List<Materia> materiasACursar
    - boolean aprobada
    - Alumno alumno
    - LocalDateTime fechaEvaluacion
    + boolean aprobada()
}

Inscripcion --> Alumno
Alumno -->"*" Materia
Materia -->"*" Materia
Inscripcion --> Materia


@enduml